[gd_scene load_steps=2 format=3 uid="uid://pinfo001"]

[ext_resource type="Script" path="res://scripts/components/player_info.gd" id="1"]

[node name="PlayerInfo" type="PanelContainer"]
script = ExtResource("1")
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1

[node name="HandLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)
